# Rule_Engine

./: README.md  app.py  config.py  database.py  main.py  models.py  pyproject.toml  rules.py  test_evaluate_rule.py
templates/: index.html
tests/: test_rules.py
