[tool.poetry]
name = "rule-engine"
version = "0.1.0"
description = "Rule Engine Project"
authors = ["anvitha31303 <2000031303@kluniversity.in>"]
readme = "README.md"

packages = [
    { include = "src" }  # Make sure the source folder exists
]
[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
fastapi = "^0.95.0"
psycopg2-binary = "^2.9.10"
flask = "^3.0.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
